tests/transpiler/x/clj/nested_function.clj
;; Generated by Mochi v0.10.33 on 2025-07-21 16:23:33 GMT+7
(ns main (:refer-clojure :exclude [outer]))

(require 'clojure.set)

(defn inner [x y]
  (+ x y))

(defn outer [x]
  (inner x 5))

(defn -main []
  (println (outer 3)))

(-main)
